# amsterdam-schema

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Dockerfile.dev  HandigeVScodeGIT.ps1  Jenkinsfile  Makefile  README.md  amsterdam.object.meta.schema.json  amsterdam.schema.json  config_jira_prep_dtjz_jira31_epicsdtjz.json  dataset.json  docker-compose.yml  generate_indexes.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  row-meta-schema.json  schema  schema.json  setup.cfg  setup.sh  table.json  validate.js
.github/: CODEOWNERS
.github/workflows/: pre-commit-validate-extensions.yml  pre-commit-validate-publishers.yml  pre-commit-validate-schema.yml  pre-commit-validate-scopes.yml  pre-commit.yml  show-diff.yml  trigger-ado-deploy-schemas.yml  trigger-ado-publish-schemas.yml  unity-catalog.yml  validate-datasets.yml  validate-tables.yml  validation.yml
context/: README.md  dataset.jsonld
datasets/: dataset.json  datasets.json  index.json  wagenpark_voertuig
datasets/9straatjes/: dataset.json
datasets/aanvragenlevensonderhoud/: dataset.json
datasets/aardgasverbruik/: dataset.json
datasets/aardgasvrijezones/: aardgasvrijezones  aardgasvrijezones.json  dataset.json
datasets/afvalwijzer/: dataset.json
datasets/amsterdam_canon/: dataset.json
datasets/anpr/: anpr.json  dataset.json
datasets/asbestdaken/: asbestdaken.json  dataset.json
datasets/asset/: dataset.json
datasets/assset/: dataset.json
datasets/bag/: bag.json  dataset.json
datasets/bag_azure/: dataset.json
datasets/baggob/: baggob.json
datasets/bagh/: bagh.json
datasets/basiskaart/: basiskaart.json  dataset.json
datasets/bbga/: bbga.json  dataset.json
datasets/bedrijfsinvesteringszones/: bedrijfsinvesteringszones.json
datasets/bedrijveninvesteringszones/: dataset.json  (+1 more)
docs/: Makefile  README.md  ams-schema-spec.bs  ams-schema-spec.html
example/: nap.json  peilmerken.json  peilmerken.schema.json  validate.sh
examples/: bag.pand.schema.json
meta/: ams.$ref.class.json  ams.auth.json  ams.nullable.json  ams.provenance.json  ams.unit.json  auth.json  class.json  collection.json  core.json  dataset.json  object-schema.json  object.json  objects.json  provenance.json  relation.json  type.json  unit.json
profiles/: MD.json
publishers/: AMID.json  AMIP.json  BENK  BENK.json  BOR  BOR.json  CVISION  CVISION.json  DADI  DADI.json  DAMS.json  DAVE  DAVE.json  DEBI.json  DFIN  DFIN.json  DGEN  DGEN.json  DMT.json  DOMG  DOMG.json  DPGO.json  DPWO.json  DSOC  DSOC.json  DTJZ.json  MOBI  MOBI.json  MOSS.json  OPDR  OPDR.json  SOEB  SOEB.json  STAT  STAT.json  SVD.json  UNKNOWN.json  WPI.json  index.json  publishers.json
schema@v1.1.0/: dataset.json  row-meta-schema.json  schema.json  table.json
schema@v1.1.1/: dataset.json  row-meta-schema.json  schema.json  table.json
schema@v1.2.0/: dataset.json  row-meta-schema.json  schema.json  table.json
schema@v1.3.0/: dataset.json  objectstore.json  publisher.json  row-meta-schema.json  schema.json  table.json
schema@v1.4.0/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  table.json
schema@v2/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  table.json
schema@v2.0.0/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  table.json
schema@v2.0.1/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  table.json
schema@v2.1.0/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v2.2.0/: dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v3/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v3.1.0/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v3.2.0/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v4.0.0/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  schema@v4.0.0  scope.json  table.json
schema@v4.1.0/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
schema@v4.2.0/: dataset-version.json  dataset.json  distribution.json  publisher.json  row-meta-schema.json  schema.json  scope.json  table.json
scopes/: index.json  packages.json  scopes.json
scripts/: convert_datasets.py  generate_previous_datasets_from_master.sh  generate_previous_tables_from_master.sh  import_marketplace_products.py  relations_graph.py  upgrade_datasets_v3_v4.py
src/: Dockerfile  Makefile  publish.py  requirements.in  requirements.txt  requirements_dev.txt
subsidies/: dataset.json
test/: test.js  validate.js
tests/: test_import_marketplace.py
(+2701 files in other folders)
