[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
